# prds

./: .env.example  .gitignore  API.md  CLAUDE.md  DEPLOY.md  Dockerfile  QQ_BOT_GUIDE.md  README.md  alembic.ini  astrbotQQbot.py  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  update.sh
app/: main.py
app/api/v1/: __init__.py  admin.py  health.py  resources.py
app/core/: config.py  database.py  exceptions.py  redis.py
app/models/: __init__.py  base.py  pan_account.py  resource.py  task.py
app/providers/: __init__.py  baidu.py  base.py  quark.py  uc.py
app/repositories/: pan_account.py  resource.py  task.py
app/schemas/: resource.py  response.py
app/services/: link_checker.py  pansou_client.py  resource_service.py  scheduler.py
app/workers/: delete_worker.py  main.py
docs/: 00_项目总览与阅读顺序.md  01_PRD_产品需求文档.md  02_API协议设计.md  03_数据库表结构设计.md  04_Redis缓存设计.md  05_资源生命周期设计.md  06_账号池调度算法.md  07_Worker任务架构.md  08_Provider抽象设计.md  09_FastAPI项目结构.md  10_Docker部署架构.md  11_高并发架构设计.md  12_开发阶段与AI提示词.md  13_上线检查清单.md  14_智能补偿机制设计.md  multi-netdisk-extension.md
migrations/: env.py
static/: admin.html
